<resources>
    <string name="app_name">CHECK_IN</string>
    <string name="sign_in">账号密码登录</string>
    <string name="sign_in2">人脸登录</string>
    <string name="sign_in3">请输入学号</string>
    <string name="sign_in4">请输入密码</string>
    <string name="login_in">登录</string>
    <string name="checkbutton">查询</string>
    <string name="check_late">迟到查询</string>
    <string name="check_leave">旷课查询</string>
    <string name="check_date">日期查询</string>
    <string name="date_choose">选择日期</string>
    <string name="date_choose_ok">查询</string>
</resources>
