<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <com.example.weifeng.check_in.login.CustomVideoView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/videoView"/>


   <ImageView
       android:id="@+id/img_login"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:scaleType="fitXY"
       android:src="@mipmap/login_blur"
       android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="125dp"
            android:alpha="0.5"
            android:background="@drawable/button_shape"
            android:onClick="numberClick"
            android:text="@string/sign_in"
            android:textColor="#3fc7f4" />

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="61dp"
            android:alpha="0.5"
            android:background="@drawable/button_shape"
            android:onClick="faceClick"
            android:text="@string/sign_in2"
            android:textColor="#3fc7f4" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="84dp"
            android:alpha="0.5"
            android:background="@drawable/button_shape"
            android:hint="@string/sign_in3"
            android:textColorHint="#3fc7f4"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="137dp"
            android:alpha="0.5"
            android:background="@drawable/button_shape"
            android:hint="@string/sign_in4"
            android:textColorHint="#3fc7f4"
            android:visibility="gone" />

        <Button
            android:id="@+id/button3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:alpha="0.5"
            android:background="@drawable/button_shape"
            android:text="@string/login_in"
            android:textColor="#3fc7f4"
            android:visibility="gone"
            android:onClick="login_in_Click"/>
        <android.support.v7.widget.Toolbar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:visibility="gone"
            >

        </android.support.v7.widget.Toolbar>


    </RelativeLayout>
</FrameLayout>